- Escape _ and % when using search with LIKE
- Fix ID in nested scaffolds when parent record has string primary key, with invalid chars for HTML ID

= 3.7.2
- Fix routes

= 3.7.1
- Nullable boolean columns default to use :boolean form_ui instead of :checkbox
- Display the value set in options[:include_blank] for boolean columns when value is nil, to match the label in the form
- Support :select_multiple in search_ui, and :draggable in form_ui and search_ui, as shorthands
- Support assigning options next to the UI type in form_ui, list_ui, show_ui, search_ui, so they are used instead of common options
- Support :refresh_link option in :select form_ui for non-association columns
- Support using a hash in :refresh_link option instead of true, with html
- Support select with multiple attribute for plural associations using :select form_ui, instead of checkboxes, using {html_options: {multiple: true}}, or :select_multiple
- Support attributes= in column, to set multiple settings with a hash
- Fix update_columns in type column of polymorphic association, when foreign key has value, it will look for old id with new type and may fail
- Support changing between subform and form_ui with update_columns
- Deprecate automatic :select form_ui for associations in subforms, set :select in the controller config to remove deprecation warning, or enable new behaviour of nested subforms with ActiveScaffold.nested_subforms = true
- Some fixes for human conditions with some search UI
- Add more string comparators in field search
- Support date and datetime searches with operators using html5 inputs, as was supported when using date picker. The different bridges, date_picker and calendar_date_select, will just replace the input fields.
- Support disabling default usage of jquery UI date picker, in case of sortable is wanted, so jquery-ui-rails is loaded, but wants to use HTML5 date input.