@@ -1,5 +1,6 @@
 - Escape _ and % when using search with LIKE
 - Fix ID in nested scaffolds when parent record has string primary key, with invalid chars for HTML ID
+- Fix search with recordselect multiple
 
 = 3.7.2
 - Fix routes
